fixed up names for high contrast styles, added red

--- a/packages/theme-dark-extension/style/variables.css
+++ b/packages/theme-dark-extension/style/variables.css
@@ -397,9 +397,10 @@ all of MD as it is not optimized for dense, information rich UIs.
   --jp-scrollbar-thumb-margin: 3.5px; /* the space in between the sides of the thumb and the track */
   --jp-scrollbar-thumb-radius: 9px; /* set to a large-ish value for rounded endcaps on the thumb */
 
-  /* Icon colors that work well with light or dark backgrounds */
-  --jp-icon-contrast-color0: var(--md-purple-600);
-  --jp-icon-contrast-color1: var(--md-green-600);
-  --jp-icon-contrast-color2: var(--md-pink-600);
-  --jp-icon-contrast-color3: var(--md-blue-600);
+  /* colors that work well with light or dark backgrounds */
+  --jp-contrast-blue: var(--md-blue-600);
+  --jp-contrast-green: var(--md-green-600);
+  --jp-contrast-pink: var(--md-pink-600);
+  --jp-contrast-purple: var(--md-purple-600);
+  --jp-contrast-red: var(--md-red-600);
 }
