--- a/packages/ui-components/style/icons.css
+++ b/packages/ui-components/style/icons.css
@@ -138,30 +138,36 @@
   stroke: var(--jp-warn-color3);
 }
 /* icon colors that contrast well with each other and most backgrounds */
-.jp-icon-contrast0[fill] {
-  fill: var(--jp-icon-contrast-color0);
+.jp-icon-contrast-blue[fill] {
+  fill: var(--jp-contrast-blue);
 }
-.jp-icon-contrast1[fill] {
-  fill: var(--jp-icon-contrast-color1);
+.jp-icon-contrast-green[fill] {
+  fill: var(--jp-contrast-green);
 }
-.jp-icon-contrast2[fill] {
-  fill: var(--jp-icon-contrast-color2);
+.jp-icon-contrast-pink[fill] {
+  fill: var(--jp-contrast-pink);
 }
-.jp-icon-contrast3[fill] {
-  fill: var(--jp-icon-contrast-color3);
+.jp-icon-contrast-purple[fill] {
+  fill: var(--jp-contrast-purple);
+}
+.jp-icon-contrast-red[fill] {
+  fill: var(--jp-contrast-red);
 }
 
-.jp-icon-contrast0[stroke] {
-  stroke: var(--jp-icon-contrast-color0);
+.jp-icon-contrast-blue[stroke] {
+  stroke: var(--jp-contrast-blue);
 }
-.jp-icon-contrast1[stroke] {
-  stroke: var(--jp-icon-contrast-color1);
+.jp-icon-contrast-green[stroke] {
+  stroke: var(--jp-contrast-green);
 }
-.jp-icon-contrast2[stroke] {
-  stroke: var(--jp-icon-contrast-color2);
+.jp-icon-contrast-pink[stroke] {
+  stroke: var(--jp-contrast-pink);
 }
-.jp-icon-contrast3[stroke] {
-  stroke: var(--jp-icon-contrast-color3);
+.jp-icon-contrast-purple[stroke] {
+  stroke: var(--jp-contrast-purple);
+}
+.jp-icon-contrast-red[stroke] {
+  stroke: var(--jp-contrast-red);
 }
 
 /* CSS for icons in selected items in the settings editor */
